--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0-beta-4ff5f5719-20211115",
+    "react-dom": "^18.0.0-beta-4ff5f5719-20211115",
     "recoil": "^0.5.2"
   },
   "devDependencies": {
